--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ _ReSharper*
 *.sdf
 *.suo
 *.dir
-*.vcxproj*
-*.sln
+# *.vcxproj*
+# *.sln
 .vs
 CMakeSettings.json
 Win32
@@ -101,3 +101,7 @@ tests/triangle-vulkan
 tests/window
 tests/windows
 
+bin-int
+bin
+examples
+tests
