--- a/src/glfw.vcxproj
+++ b/src/glfw.vcxproj
@@ -78,7 +78,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -95,10 +95,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;_WINDOWS;_GLFW_WIN32;UNICODE;_UNICODE;_CRT_SECURE_NO_WARNINGS;CMAKE_INTDIR=\"Debug\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -111,7 +111,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -128,10 +128,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;_GLFW_WIN32;UNICODE;_UNICODE;_CRT_SECURE_NO_WARNINGS;CMAKE_INTDIR=\"Release\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -144,7 +144,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ExceptionHandling>
       </ExceptionHandling>
@@ -161,10 +161,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;_GLFW_WIN32;UNICODE;_UNICODE;_CRT_SECURE_NO_WARNINGS;CMAKE_INTDIR=\"MinSizeRel\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -177,7 +177,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <ExceptionHandling>
@@ -193,10 +193,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;_GLFW_WIN32;UNICODE;_UNICODE;_CRT_SECURE_NO_WARNINGS;CMAKE_INTDIR=\"RelWithDebInfo\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\TRY_Engine\dev\Try\Libraries\GLFW\include;D:\TRY_Engine\dev\Try\Libraries\GLFW\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -208,95 +208,38 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CustomBuild Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeLists.txt">
-      <UseUtf8Encoding>Always</UseUtf8Encoding>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Building Custom Rule D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeLists.txt</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -SD:/TRY_Engine/dev/Try/Libraries/GLFW -BD:/TRY_Engine/dev/Try/Libraries/GLFW --check-stamp-file D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeFiles/generate.stamp
-if %errorlevel% neq 0 goto :cmEnd
-:cmEnd
-endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
-:cmErrorLevel
-exit /b %1
-:cmDone
-if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\CMake\glfw3.pc.in;%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeFiles\generate.stamp</Outputs>
-      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkObjects>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Building Custom Rule D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeLists.txt</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -SD:/TRY_Engine/dev/Try/Libraries/GLFW -BD:/TRY_Engine/dev/Try/Libraries/GLFW --check-stamp-file D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeFiles/generate.stamp
-if %errorlevel% neq 0 goto :cmEnd
-:cmEnd
-endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
-:cmErrorLevel
-exit /b %1
-:cmDone
-if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\CMake\glfw3.pc.in;%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeFiles\generate.stamp</Outputs>
-      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
-      <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">Building Custom Rule D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeLists.txt</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -SD:/TRY_Engine/dev/Try/Libraries/GLFW -BD:/TRY_Engine/dev/Try/Libraries/GLFW --check-stamp-file D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeFiles/generate.stamp
-if %errorlevel% neq 0 goto :cmEnd
-:cmEnd
-endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
-:cmErrorLevel
-exit /b %1
-:cmDone
-if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\CMake\glfw3.pc.in;%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeFiles\generate.stamp</Outputs>
-      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</LinkObjects>
-      <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">Building Custom Rule D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeLists.txt</Message>
-      <Command Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">setlocal
-"C:\Program Files\CMake\bin\cmake.exe" -SD:/TRY_Engine/dev/Try/Libraries/GLFW -BD:/TRY_Engine/dev/Try/Libraries/GLFW --check-stamp-file D:/TRY_Engine/dev/Try/Libraries/GLFW/src/CMakeFiles/generate.stamp
-if %errorlevel% neq 0 goto :cmEnd
-:cmEnd
-endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
-:cmErrorLevel
-exit /b %1
-:cmDone
-if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\CMake\glfw3.pc.in;%(AdditionalInputs)</AdditionalInputs>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeFiles\generate.stamp</Outputs>
-      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">false</LinkObjects>
-    </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\include\GLFW\glfw3.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\include\GLFW\glfw3native.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\internal.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\platform.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\mappings.h" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\context.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\init.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\input.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\monitor.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\platform.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\vulkan.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\window.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\egl_context.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\osmesa_context.c" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_platform.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_joystick.h" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_init.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_monitor.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_window.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_joystick.c" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_time.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_thread.h" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_module.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_time.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_thread.c" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_platform.h" />
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_joystick.h" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_init.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_joystick.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_monitor.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_window.c" />
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\wgl_context.c" />
+    <ClInclude Include="$(SolutionDir)include\GLFW\glfw3.h" />
+    <ClInclude Include="$(SolutionDir)include\GLFW\glfw3native.h" />
+    <ClInclude Include="$(SolutionDir)src\internal.h" />
+    <ClInclude Include="$(SolutionDir)src\platform.h" />
+    <ClInclude Include="$(SolutionDir)src\mappings.h" />
+    <ClCompile Include="$(SolutionDir)src\context.c" />
+    <ClCompile Include="$(SolutionDir)src\init.c" />
+    <ClCompile Include="$(SolutionDir)src\input.c" />
+    <ClCompile Include="$(SolutionDir)src\monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\platform.c" />
+    <ClCompile Include="$(SolutionDir)src\vulkan.c" />
+    <ClCompile Include="$(SolutionDir)src\window.c" />
+    <ClCompile Include="$(SolutionDir)src\egl_context.c" />
+    <ClCompile Include="$(SolutionDir)src\osmesa_context.c" />
+    <ClInclude Include="$(SolutionDir)src\null_platform.h" />
+    <ClInclude Include="$(SolutionDir)src\null_joystick.h" />
+    <ClCompile Include="$(SolutionDir)src\null_init.c" />
+    <ClCompile Include="$(SolutionDir)src\null_monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\null_window.c" />
+    <ClCompile Include="$(SolutionDir)src\null_joystick.c" />
+    <ClInclude Include="$(SolutionDir)src\win32_time.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_thread.h" />
+    <ClCompile Include="$(SolutionDir)src\win32_module.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_time.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_thread.c" />
+    <ClInclude Include="$(SolutionDir)src\win32_platform.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_joystick.h" />
+    <ClCompile Include="$(SolutionDir)src\win32_init.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_joystick.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_window.c" />
+    <ClCompile Include="$(SolutionDir)src\wgl_context.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
