--- a/src/glfw.vcxproj.filters
+++ b/src/glfw.vcxproj.filters
@@ -1,107 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\context.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\init.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\input.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\monitor.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\platform.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\vulkan.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\window.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\egl_context.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\osmesa_context.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_init.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_monitor.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_window.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_joystick.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_module.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_time.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_thread.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_init.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_joystick.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_monitor.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_window.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\wgl_context.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClCompile Include="$(SolutionDir)src\context.c" />
+    <ClCompile Include="$(SolutionDir)src\init.c" />
+    <ClCompile Include="$(SolutionDir)src\input.c" />
+    <ClCompile Include="$(SolutionDir)src\monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\platform.c" />
+    <ClCompile Include="$(SolutionDir)src\vulkan.c" />
+    <ClCompile Include="$(SolutionDir)src\window.c" />
+    <ClCompile Include="$(SolutionDir)src\egl_context.c" />
+    <ClCompile Include="$(SolutionDir)src\osmesa_context.c" />
+    <ClCompile Include="$(SolutionDir)src\null_init.c" />
+    <ClCompile Include="$(SolutionDir)src\null_monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\null_window.c" />
+    <ClCompile Include="$(SolutionDir)src\null_joystick.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_module.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_time.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_thread.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_init.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_joystick.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_monitor.c" />
+    <ClCompile Include="$(SolutionDir)src\win32_window.c" />
+    <ClCompile Include="$(SolutionDir)src\wgl_context.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\include\GLFW\glfw3.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\include\GLFW\glfw3native.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\internal.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\platform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\mappings.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_platform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\null_joystick.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_time.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_thread.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_platform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\win32_joystick.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="D:\TRY_Engine\dev\Try\Libraries\GLFW\src\CMakeLists.txt" />
+    <ClInclude Include="$(SolutionDir)include\GLFW\glfw3.h" />
+    <ClInclude Include="$(SolutionDir)include\GLFW\glfw3native.h" />
+    <ClInclude Include="$(SolutionDir)src\internal.h" />
+    <ClInclude Include="$(SolutionDir)src\platform.h" />
+    <ClInclude Include="$(SolutionDir)src\mappings.h" />
+    <ClInclude Include="$(SolutionDir)src\null_platform.h" />
+    <ClInclude Include="$(SolutionDir)src\null_joystick.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_time.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_thread.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_platform.h" />
+    <ClInclude Include="$(SolutionDir)src\win32_joystick.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
